--- a/MonkeyWallet.Desktop/Views/MainWindow.axaml
+++ b/MonkeyWallet.Desktop/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:MonkeyWallet.Desktop.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:MonkeyWallet.Desktop.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MonkeyWallet.Desktop.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -14,7 +15,5 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <views:NavigationBar/>
 </Window>
