--- a/MonkeyWallet.Desktop/Views/Wallet/ShowMnemonicView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/ShowMnemonicView.axaml
@@ -1,12 +1,8 @@
-﻿<UserControl xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="MonkeyWallet.Desktop.Views.Wallet.WalletListView">
-
-    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
-        <TextBlock Height="500" Text="HELLO"></TextBlock>
-    </Grid>
-
+             x:Class="MonkeyWallet.Desktop.Views.Wallet.ShowMnemonicView">
+  Welcome to Avalonia!
 </UserControl>
