--- a/MonkeyWallet.Desktop/Views/Wallet/WalletListView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletListView.axaml
@@ -5,8 +5,18 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MonkeyWallet.Desktop.Views.Wallet.WalletListView">
 
-    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="Yellow" >
-    <TextBlock Height="500" Text="HELLO"></TextBlock>
+    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <ExperimentalAcrylicBorder IsHitTestVisible="False">
+            <ExperimentalAcrylicBorder.Material>
+                <ExperimentalAcrylicMaterial
+                    BackgroundSource="Digger"
+                    TintColor="Black"
+                    TintOpacity="1"
+                    MaterialOpacity="0.65" />
+            </ExperimentalAcrylicBorder.Material>
+        </ExperimentalAcrylicBorder>
+        <ListBox Items="{Binding UserWallets}" SelectedItem="{Binding SelectedWallet}" Background="Transparent" Margin="0 20" >
+        </ListBox>
 </Grid>
 
 
