--- a/MonkeyWallet.Desktop/Views/Wallet/WalletListView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletListView.axaml
@@ -5,7 +5,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MonkeyWallet.Desktop.Views.Wallet.WalletListView">
 
-    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" RowDefinitions="*,*">
         <ExperimentalAcrylicBorder IsHitTestVisible="False">
             <ExperimentalAcrylicBorder.Material>
                 <ExperimentalAcrylicMaterial
@@ -15,7 +15,10 @@
                     MaterialOpacity="0.65" />
             </ExperimentalAcrylicBorder.Material>
         </ExperimentalAcrylicBorder>
-        <ListBox Items="{Binding UserWallets}"  SelectedItem="{Binding SelectedWallet}" Background="Transparent" Margin="0 20" >
+
+        <Button Command="{Binding GoToAddWallet}">Add New</Button>
+      
+        <ListBox Grid.Row="1" Items="{Binding UserWallets}"  SelectedItem="{Binding SelectedWallet}" Background="Transparent" Margin="0 20" >
             
         </ListBox>
 </Grid>
