starting wallet settings

--- a/MonkeyWallet.Desktop/Views/Wallet/WalletDetailView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletDetailView.axaml
@@ -2,9 +2,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:v="clr-namespace:MonkeyWallet.Desktop.Views.Wallet"
+             xmlns:vm="clr-namespace:MonkeyWallet.Desktop.ViewModels.Wallet"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MonkeyWallet.Desktop.Views.Wallet.WalletDetailView">
-
+    
+    <Design.DataContext>
+        <vm:WalletDetailViewModel></vm:WalletDetailViewModel>
+    </Design.DataContext>
+    
     <Grid RowDefinitions="Auto, Auto">
         <Grid ColumnDefinitions="Auto, Auto, Auto, Auto" Grid.Column="0" Grid.Row="0" Height="150">
             <Button Height="50" Width="100" Margin="50,0,50,0" Command="{Binding GotToWalletListView}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="0">Wallets</Button>
@@ -32,6 +38,7 @@
                 <TabItem.Header>
                     <TextBlock FontWeight="1500" VerticalAlignment="Center">Settings</TextBlock>
                 </TabItem.Header>
+                <v:WalletSettingsView WalletId="{Binding WalletName}"></v:WalletSettingsView>
             </TabItem>
         </TabControl>
     </Grid>
