--- a/MonkeyWallet.Desktop/Views/Transaction/TransactionListView.axaml
+++ b/MonkeyWallet.Desktop/Views/Transaction/TransactionListView.axaml
@@ -4,5 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MonkeyWallet.Desktop.Views.Transaction.TransactionListView">
-    Welcome to Avalonia!
+    
+    <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" RowDefinitions="*,*">
+        <ExperimentalAcrylicBorder IsHitTestVisible="False">
+            <ExperimentalAcrylicBorder.Material>
+                <ExperimentalAcrylicMaterial
+                    BackgroundSource="Digger"
+                    TintColor="Black"
+                    TintOpacity="1"
+                    MaterialOpacity="0.65" />
+            </ExperimentalAcrylicBorder.Material>
+        </ExperimentalAcrylicBorder>
+      
+        <ListBox Grid.Row="1" Items="{Binding WalletTransactions}"  SelectedItem="{Binding SelectedTransaction}" Background="Transparent" Margin="0 20" >
+            
+        </ListBox>
+    </Grid>
 </UserControl>
