--- a/MonkeyWallet.Desktop/Views/Wallet/WalletSettingsView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletSettingsView.axaml
@@ -21,51 +21,68 @@
     </Grid.RowDefinitions>
     
     <!--Change Name-->
-    <Label Margin="0, 0, 0, 5"
-           FontWeight="Bold"
-           FontSize="18">Change Name</Label>
-    <TextBox Name="tbName" 
-             Grid.Row="1" 
-             Grid.ColumnSpan="2"
-             Margin="0, 0, 0, 5"/>
+    <StackPanel>
+      <Label Margin="0, 0, 0, 5"
+             FontWeight="Bold"
+             FontSize="18">Change Name</Label>
+      <TextBlock Foreground="Lime" x:Name="tbWalletNameSuccess"></TextBlock>
+    </StackPanel>
+    <StackPanel Grid.Row="1"
+             Grid.ColumnSpan="2">
+      <TextBox x:Name="tbWalletName"
+               Margin="0, 0, 0, 5"/>
+      <TextBlock Foreground="Magenta" x:Name="tbWalletNameError"></TextBlock>
+    </StackPanel>
     <Button Name="btnResetChangeName" 
             Grid.Row="2" 
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center">Reset</Button>
+            HorizontalContentAlignment="Center"
+            Command="{Binding ResetNameCommand}">Reset</Button>
     <Button Name="btnSubmitChangeName" 
             Grid.Row="2" 
             Grid.Column="1"
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center">Submit</Button>
+            HorizontalContentAlignment="Center"
+            Command="{Binding UpdateNameCommand}">Submit</Button>
     
     <!--Change Password-->
-    <Label Margin="0, 0, 0, 5"
-           FontWeight="Bold"
-           FontSize="18"
-           Grid.Row="3">Change Name</Label>
-    <TextBox Name="tbCurrentPassword"
-             Grid.Row="4"
-             Grid.ColumnSpan="2"
-             Watermark="Current Password"
-             Margin="0, 0, 0, 5"/>
-    <TextBox Name="tbNewPassword"
-             Grid.Row="5"
-             Watermark="New Password"
-             Margin="0, 0, 0, 5"/>
-    <TextBox Name="tbConfirmPassword"
-             Grid.Row="5"
-             Grid.Column="1"
-             Watermark="Confirm Password"
-             Margin="0, 0, 0, 5"/>
+    <StackPanel Grid.Row="3">
+      <Label Margin="0, 0, 0, 5"
+             FontWeight="Bold"
+             FontSize="18">Change Name</Label>
+      <TextBlock Foreground="Lime" x:Name="tbPasswordSuccess"></TextBlock>
+    </StackPanel>
+    <StackPanel Grid.Row="4"
+             Grid.ColumnSpan="2">
+      <TextBox x:Name="tbCurrentPassword"
+               Watermark="Current Password"
+               Margin="0, 0, 0, 5"/>
+      <TextBlock Foreground="Magenta" x:Name="tbCurrentPasswordError"></TextBlock>
+    </StackPanel>
+    <StackPanel Grid.Row="5">
+      <TextBox x:Name="tbNewPassword"
+               Watermark="New Password"
+               Margin="0, 0, 0, 5"/>
+      <TextBlock Foreground="Magenta" x:Name="tbNewPasswordError"></TextBlock>
+    </StackPanel>
+    <StackPanel Grid.Row="5"
+             Grid.Column="1">
+      <TextBox x:Name="tbConfirmPassword"
+               Watermark="Confirm Password"
+               Margin="0, 0, 0, 5"/>
+      <TextBlock Foreground="Magenta" x:Name="tbConfirmPasswordError"></TextBlock>
+    </StackPanel>
     <Button Name="btnResetChangePassword"
             Grid.Row="6"
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center">Reset</Button>
+            HorizontalContentAlignment="Center"
+            Command="{Binding ResetPasswordCommand}">Reset</Button>
     <Button Name="btnSubmitChangePassword"
             Grid.Row="6"
             Grid.Column="1"
             HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center">Submit</Button>
+            HorizontalContentAlignment="Center"
+            Command="{Binding UpdatePasswordCommand}">Submit</Button>
     
   </Grid>
   
