Starting to get rid of place holder data

--- a/MonkeyWallet.Desktop/Views/Wallet/WalletListItemView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletListItemView.axaml
@@ -12,8 +12,7 @@
         </Border>
         <UniformGrid  Columns="3" Rows="1" HorizontalAlignment="Stretch" >
             <TextBlock Text="{Binding WalletName}" />
-            <TextBlock Text="Ada Amount 5000"/>
-            <TextBlock Text="Last Sync 2 minutes ago"/>
+            <TextBlock Text="{Binding TotalBalance}" />
         </UniformGrid>
         
     </StackPanel>
