Getting start on receive fund

--- a/MonkeyWallet.Desktop/Views/Wallet/WalletDetailView.axaml
+++ b/MonkeyWallet.Desktop/Views/Wallet/WalletDetailView.axaml
@@ -3,9 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:v="clr-namespace:MonkeyWallet.Desktop.Views.Wallet"
-             xmlns:vm="clr-namespace:MonkeyWallet.Desktop.ViewModels"
              xmlns:wallet="clr-namespace:MonkeyWallet.Desktop.ViewModels.Wallet"
              xmlns:transaction="clr-namespace:MonkeyWallet.Desktop.Views.Transaction"
+             xmlns:receiveFunds="clr-namespace:MonkeyWallet.Desktop.ViewModels.Wallet.ReceiveFunds"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="MonkeyWallet.Desktop.Views.Wallet.WalletDetailView">
     
@@ -36,6 +36,7 @@
                 <TabItem.Header>
                     <TextBlock FontWeight="1500" VerticalAlignment="Center">Receive</TextBlock>
                 </TabItem.Header>
+                <receiveFunds:BaseReceiveFundsViewModel></receiveFunds:BaseReceiveFundsViewModel>
             </TabItem>
             <TabItem>
                 <TabItem.Header>
